# CleanAgent

./: .gitignore  README.md  ground_truth_extraction.py  llm_cache.csv  llm_cache.json  main.py  pyproject.toml  requirements.txt
.chainlit/: config.toml
clean-agent/: clean_agent.py  column_type_annotation_agent.py
data/real_world/: flight_1k.csv  flight_1k_cleaned.csv  flight_1k_withgt.csv
