[tool.poetry]
name = "clean-agent"
version = "0.1.0"
description = "Demo repository for agent on data cleaning task"
authors = ["qidanrui <qidanrui@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.9.7 || >3.9.7,<3.12"
pyautogen = "^0.2.0"
streamlit = "^1.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
